2010-09-11  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        http/tests/media/text-served-as-text.html failing on Windows (Debug+Release)
        https://bugs.webkit.org/show_bug.cgi?id=45603

        Disable the eat/text components under Windows the same way as we do on the Mac.

        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp:
        * platform/graphics/win/QTMovie.cpp:
        * platform/graphics/win/QTMovie.h:


Canonical link: https://commits.webkit.org/58062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67330 268f45cc-cd09-0410-ab3c-d52691b4dbfc